Implement game mechanic on server
- Feeding a question in connect
- Feeding a question for every interval time
- Handle submited poin from user and broadcast
- Fix json format to seed multiple answers

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "m3r@p1",
     "database": "db_cerdascermat_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
