--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "m3r@p1",
+    "password": "postgres",
     "database": "db_cerdascermat_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
